# bundesdata-rag

./: .gitignore  README.md  bundesdata_rag.ipynb  main.py  pyproject.toml
